--- a/runner/Dockerfile
+++ b/runner/Dockerfile
@@ -9,6 +9,9 @@ RUN \
 	mkdir /home/pennmush/game && \
 	echo "cd /home/pennmush/game && ./restart && tail -F /home/pennmush/game/log/netmush.log" > /home/pennmush/entrypoint.sh && \
 	chmod +x /home/pennmush/entrypoint.sh
+ADD backup /home/pennmush/backup
+RUN chown -R pennmush:pennmush /home/pennmush/backup
+ADD crontab /etc/cron.d/pennback
 VOLUME [ "/home/pennmush/game" ] 
 USER pennmush
 WORKDIR /home/pennmush/
