Save game on 'docker stop'
Remove crontab (won't start autmatically)

--- a/runner/Dockerfile
+++ b/runner/Dockerfile
@@ -6,15 +6,13 @@ RUN \
 	cp -r -f /usr/share/zoneinfo/Europe/Amsterdam /etc/localtime && \
 	adduser -g "pennmush user" -s /bin/sh -D pennmush -u 1000 && \
 	su - pennmush && \
-	mkdir /home/pennmush/game && \
-	echo "cd /home/pennmush/game && ./restart && tail -F /home/pennmush/game/log/netmush.log" > /home/pennmush/entrypoint.sh && \
+	mkdir /home/pennmush/game
+ADD entrypoint.sh /home/pennmush/entrypoint.sh
+RUN \
+	chown -R pennmush:pennmush /home/pennmush && \
 	chmod +x /home/pennmush/entrypoint.sh
-ADD backup /home/pennmush/backup
-RUN chown -R pennmush:pennmush /home/pennmush/backup
-ADD crontab /etc/cron.d/pennback
 VOLUME [ "/home/pennmush/game" ] 
 USER pennmush
 WORKDIR /home/pennmush/
 EXPOSE 4201
-ENTRYPOINT [ "/bin/sh", "-c" ]
-CMD [ "/home/pennmush/entrypoint.sh" ]
+ENTRYPOINT [ "/home/pennmush/entrypoint.sh" ]
